# cans

./: CMakeLists.txt  FindNURBS++.cmake  README.md  package.xml  setup.py
config/: defaultParameters.yaml  nurbslamParameters.yaml  nurbslamParameters.yaml.orig  nurbslamParameters_FinalDemoSettings.yaml  nurbslamParameters_const_pos.yaml  nurbslamParameters_mapping.yaml  unrealNurbslamParameters.yaml  unrealNurbslamParametersLowRes.yaml  unrealNurbslamParameters_good.yaml  unrealNurbslamParameters_pre2018_05_15.yaml
data/: nurbsTimes.txt  nurbsTimes_2018_05_08_1044.txt
examples/: curveTesting.cpp  localizationTesting.cpp  object3DPythonInterface.py  obstacleRepresentation.cpp  planWithNURBS.py  pointCloudTesting.cpp  pythonSubscriber.py  rosInterfaceNURBSTest.cpp  rosNURBSLAMNode.cpp  rosScanPublish.cpp  rosUnrealInterface.cpp  rosUnrealTimer.cpp  slamNURBS.cpp  surfaceJoining.cpp  test_mapping.cpp  testingSplitSurface.cpp  tfPubTest.cpp  unreal_planWithNURBS.py
include/cans/: mapping3D.h  nurbSLAM.h  object3D.h  splitSurface.h
launch/: nurbslam.launch  nurbslam_rosnode.launch
python/cans/: __init__.py
src/: mapping3D.cpp  nurbSLAM.cpp  nurbSLAM.cpp.orig  object3D.cpp  splitSurface.cpp
src/pybind11/: bind.cpp  object3D_bind.cpp
tests/: test_mapping3D.cpp  test_nurbSLAM.cpp  test_object3D.cpp  test_splitSurface.cpp
