<?xml version="1.0"?>
<package format="2">
  <name>cans</name>
  <version>0.0.1</version>
  <description>The Cohesive Autonomous Navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="benjamin.morrell1@gmail.com">Benjamin Morrell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>nurbs++-3.0.12</build_depend>
  <build_depend>cans_msgs</build_depend>
  <!-- <build_depend>libmagick</build_depend> -->

  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nurbs++-3.0.12</build_export_depend>
  <build_export_depend>cans_msgs</build_export_depend>
  <!-- <build_export_depend>libmagick</build_export_depend> -->

  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>nurbs++-3.0.12</exec_depend>
  <exec_depend>cans_msgs</exec_depend>
  <!-- name here is taken from the nurbs++-3.0.12.pc file in /usr/local/lib/pkgconfig/ -->
  <!-- <exec_depend>libmagick</exec_depend> -->
  
  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
